systemd System and Service Manager

NEW CHANGES:
        * units:
             (+) add sysctl service;
             (+) remove systemd-sysctl service;

CHANGES WITH 214:

      (+) As an experimental feature, udev now tries to lock the
          disk device node (flock(LOCK_SH|LOCK_NB)) while it
          executes events for the disk or any of its partitions.
          Applications like partitioning programs can lock the
          disk device node (flock(LOCK_EX)) and claim temporary
          device ownership that way; udev will entirely skip all event
          handling for this disk and its partitions. If the disk
          was opened for writing, the close will trigger a partition
          table rescan in udev's "watch" facility, and if needed
          synthesize "change" events for the disk and all its partitions.
          This is now unconditionally enabled, if it turns out to
          cause major problems, we might turn it on only for specific
          devices, or might need to disable it entirely. Device-mapper
          devices are excluded from this logic.

      (-) We temporarily dropped the "-l" switch for fsck invocations,
          since they collide with the flock() logic above. util-linux
          upstream has been changed already to avoid this conflict,
          and we will readd "-l" as soon as util-linux with this
          change has been released.

      (+) The dependency on libattr has been removed. Since a long
          time the extended attribute calls have moved to glibc, and
          libattr is thus unnecessary.

      (-) Virtualization detection works without priviliges now. This
          means the systemd-detect-virt binary no longer requires
          CAP_SYS_PTRACE file capabilities, and our daemons can run
          with fewer privileges.

      (-) systemd-networkd now runs under its own "systemd-network"
          user. It retains the CAP_NET_ADMIN, CAP_NET_BIND_SERVICE,