@@ -1,6 +1,8 @@
 systemd System and Service Manager
 
 NEW CHANGES:
+        * program:
+             (+) remove systemd-sysctl program;
         * units:
              (+) add sysctl service;
              (+) remove systemd-sysctl service;
